# darkbar

./: .gitignore  README.md  com.github.bluesabre.darkbar.yml  meson.build  org.bluesabre.darkbar.yml
.github/: FUNDING.yml
data/: com.github.bluesabre.darkbar.appdata.xml.in  com.github.bluesabre.darkbar.desktop.in  com.github.bluesabre.darkbar.gschema.xml  gschema.xml  meson.build  org.bluesabre.darkbar.appdata.xml.in  org.bluesabre.darkbar.desktop.in
debian/: changelog  control  copyright
meson/: post_install.py
po/: LINGUAS  POTFILES  com.github.bluesabre.darkbar.pot  de.po  eo.po  es.po  fr.po  it.po  ja.po  lt.po  ms.po  ms@Arab.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  sv.po  tr.po  zh.po  zh_CN.po  zh_TW.po
po/extra/: LINGUAS  POTFILES  ca.po  de.po  es.po  extra.pot  fr.po  it.po  ja.po  lt.po  ms.po  ms@Arab.po  nl.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ru.po  sv.po  tr.po  zh.po  zh_CN.po
src/: AppEntry.vala  AppRegistry.vala  Application.vala  FlatpakApplicationFinder.vala  ForeignWindow.vala  SandboxedApplication.vala  WaylandWindow.vala  WaylandWindowListener.vala  XishWindow.vala  XishWindowListener.vala  meson.build
